level name clipping fix

--- a/css/pages/listpacks.css
+++ b/css/pages/listpacks.css
@@ -103,6 +103,7 @@
 .pack-list .level-container .level {
     display: flex;
     flex-direction: column;
+    padding: 2rem;
     padding-right: 2rem;
     max-width: 48rem;
 }
